# howard-yin-d5db-ref-abr

./: .env.example  .gitignore  .plan  PRODUCT.md  README.md  pyproject.toml  requirements.txt
docs/: external_backends.md
src/ref_abr/: __init__.py  __main__.py  ablation.py  accounting.py  allocator.py  artifacts.py  baselines.py  calibration.py  candidate_method_selection.py  candidates.py  cli.py  config.py  coupled_stress_harness.py  deadline_lifecycle_metrics.py  devices.py  diagnostics.py  domain.py  entrypoints.py  external_measurements.py  freeze.py  harness.py  methods.py  (+23 more)
tests/: test_ablation.py  test_accounting.py  test_allocator.py  test_artifacts.py  test_baselines.py  test_cags_provider.py  test_calibration.py  test_candidate_method_selection.py  test_candidates.py  test_cli.py  test_cli_end_to_end_mini_run.py  test_config.py  test_coupled_stress_harness.py  test_data_loading_config_fixtures.py  test_deadline_lifecycle_metrics.py  test_devices.py  test_diagnostics.py  test_domain.py  test_external_backend_e2e.py  test_external_measurements.py  test_external_substrate_provider.py  test_ffmpeg_ladder_provider.py  test_freeze.py  test_full_system_qoe_harness.py  test_harness.py  test_lifecycle.py  test_lifecycle_deadline_harness.py  test_mechanism_attribution_harness.py  test_method_interface_lifecycle_state.py  test_methods.py  test_metric_computation_known_values.py  test_metrics.py  test_mpc.py  test_network.py  test_optional_dependency_docs.py  test_outcomes.py  test_paper_outputs.py  test_pyav_decode_provider.py  test_quality_metrics.py  test_replay.py  (+13 more)
(+6 files in other folders)
